force-app/main/default/objects/SalesOrderProductLine__c/SalesOrderProductLine__c.object-meta.xml
<CustomObject>
    <description>Related object to Order for Order Product Lines. A Product is configured when the related Additional Product Info key field Service equals False.</description>
    <label>Sales Order Product Line</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Order Product Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Product Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>