force-app/main/default/objects/SalesOrderProductLine__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <formula>SalesOrder__r.Market__r.Abbreviation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abbreviation</label>
    <type>Text</type>
</CustomField>