force-app/main/default/objects/SalesOrderProductLine__c/fields/Actual_Discount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Discount__c</fullName>
    <label>Actual Discount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>