force-app/main/default/objects/SalesOrderProductLine__c/fields/Actual_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Selling_Price__c</fullName>
    <label>Actual Selling Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>