force-app/main/default/objects/SalesOrderProductLine__c/fields/Allow_Recipient_Add__c.field-meta.xml
<CustomField>
    <fullName>Allow_Recipient_Add__c</fullName>
    <formula>IF( Kit_Bundle_Member__c, false, true)</formula>
    <label>Allow Recipient Add (Kit/Bundle Only)</label>
    <type>Checkbox</type>
</CustomField>