force-app/main/default/objects/SalesOrderProductLine__c/fields/AllowQuantityChange__c.field-meta.xml
<CustomField>
    <fullName>AllowQuantityChange__c</fullName>
    <defaultValue>true</defaultValue>
    <description>For Kit/Bundle Member Lines only. Allows Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level. Checked by default</description>
    <label>Edit Quantity (Kit/Bundle Member)</label>
    <type>Checkbox</type>
</CustomField>