force-app/main/default/objects/SalesOrderProductLine__c/fields/approved_price_instantiated__c.field-meta.xml
<CustomField>
    <fullName>approved_price_instantiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>approved price instantiated</label>
    <type>Checkbox</type>
</CustomField>