force-app/main/default/objects/SalesOrderProductLine__c/fields/BalanceDueAmount__c.field-meta.xml
<CustomField>
    <fullName>BalanceDueAmount__c</fullName>
    <formula>round(NetAmount__c -  AppliedPaymentAmount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>