force-app/main/default/objects/SalesOrderProductLine__c/fields/Base_Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Base_Product_Text__c</fullName>
    <description>This field is updated with the base product value on the associated reference product</description>
    <inlineHelpText>This field is updated with the base product value on the associated reference product</inlineHelpText>
    <label>Base Product Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>