force-app/main/default/objects/SalesOrderProductLine__c/fields/Brochure_Type__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Type__c</fullName>
    <label>Brochure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Five Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>