force-app/main/default/objects/SalesOrderProductLine__c/fields/Cancel_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Explanation__c</fullName>
    <label>Cancel Explanation</label>
    <type>TextArea</type>
</CustomField>