force-app/main/default/objects/SalesOrderProductLine__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <label>Date Cancelled</label>
    <type>Date</type>
</CustomField>