force-app/main/default/objects/SalesOrderProductLine__c/fields/CancelledQuantity__c.field-meta.xml
<CustomField>
    <fullName>CancelledQuantity__c</fullName>
    <label>Cancelled Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>