force-app/main/default/objects/SalesOrderProductLine__c/fields/CancelLine__c.field-meta.xml
<CustomField>
    <fullName>CancelLine__c</fullName>
    <label>Deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>