force-app/main/default/objects/SalesOrderProductLine__c/fields/ContactShipping__c.field-meta.xml
<CustomField>
    <fullName>ContactShipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Shipping</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sales_Order_Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>