force-app/main/default/objects/SalesOrderProductLine__c/fields/CostMarkupAmount__c.field-meta.xml
<CustomField>
    <fullName>CostMarkupAmount__c</fullName>
    <label>Cost Markup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>