force-app/main/default/objects/SalesOrderProductLine__c/fields/created_by_flow__c.field-meta.xml
<CustomField>
    <fullName>created_by_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>created_by_flow</label>
    <type>Checkbox</type>
</CustomField>