force-app/main/default/objects/SalesOrderProductLine__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <formula>SalesOrder__r.Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerID</label>
    <type>Text</type>
</CustomField>