force-app/main/default/objects/SalesOrderProductLine__c/fields/CustomerPODate__c.field-meta.xml
<CustomField>
    <fullName>CustomerPODate__c</fullName>
    <formula>SalesOrder__r.CustomerPODate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer PO Date</label>
    <type>Date</type>
</CustomField>