force-app/main/default/objects/SalesOrderProductLine__c/fields/CustomerPOLine__c.field-meta.xml
<CustomField>
    <fullName>CustomerPOLine__c</fullName>
    <label>Customer PO Line</label>
    <length>40</length>
    <type>Text</type>
</CustomField>