force-app/main/default/objects/SalesOrderProductLine__c/fields/CustomerPONumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerPONumber__c</fullName>
    <formula>SalesOrder__r.CustomerPONumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer PO Number</label>
    <type>Text</type>
</CustomField>