force-app/main/default/objects/SalesOrderProductLine__c/fields/Customization__c.field-meta.xml
<CustomField>
    <fullName>Customization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customization</label>
    <type>Checkbox</type>
</CustomField>