force-app/main/default/objects/SalesOrderProductLine__c/fields/DateAvailableToPromise__c.field-meta.xml
<CustomField>
    <fullName>DateAvailableToPromise__c</fullName>
    <label>Date Available To Promise</label>
    <type>Date</type>
</CustomField>