force-app/main/default/objects/SalesOrderProductLine__c/fields/DateLastInvoice__c.field-meta.xml
<CustomField>
    <fullName>DateLastInvoice__c</fullName>
    <label>Date Last Invoice</label>
    <type>Date</type>
</CustomField>