force-app/main/default/objects/SalesOrderProductLine__c/fields/DateLastPayment__c.field-meta.xml
<CustomField>
    <fullName>DateLastPayment__c</fullName>
    <label>Date Last Payment</label>
    <type>Date</type>
</CustomField>