force-app/main/default/objects/SalesOrderProductLine__c/fields/DateLastShipment__c.field-meta.xml
<CustomField>
    <fullName>DateLastShipment__c</fullName>
    <label>Date Last Shipment</label>
    <type>Date</type>
</CustomField>