force-app/main/default/objects/SalesOrderProductLine__c/fields/DateRequired__c.field-meta.xml
<CustomField>
    <fullName>DateRequired__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Required</label>
    <required>true</required>
    <type>Date</type>
</CustomField>