force-app/main/default/objects/SalesOrderProductLine__c/fields/Delivery_Month__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Month__c</fullName>
    <description>This field is used to select the client&apos;s desired delivery month for marketing service postcard campaigns</description>
    <inlineHelpText>This field is used to select the client&apos;s desired delivery month for marketing service postcard campaigns</inlineHelpText>
    <label>Delivery Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>