force-app/main/default/objects/SalesOrderProductLine__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <defaultValue>&quot;100&quot;</defaultValue>
    <label>DepartmentID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>