force-app/main/default/objects/SalesOrderProductLine__c/fields/Discount_SKU__c.field-meta.xml
<CustomField>
    <fullName>Discount_SKU__c</fullName>
    <formula>Product__r.Discount_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount SKU</label>
    <type>Text</type>
</CustomField>