force-app/main/default/objects/SalesOrderProductLine__c/fields/Display_Name_for_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Display_Name_for_Invoice__c</fullName>
    <label>Display Name for Invoice</label>
    <length>120</length>
    <type>Text</type>
</CustomField>