force-app/main/default/objects/SalesOrderProductLine__c/fields/EffectiveDiscount__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDiscount__c</fullName>
    <description>Effective Discount is based on Total Amount from List Amount.</description>
    <formula>IF(
  ListAmount__c = 0,
  NULL,
  IF(
    ListPrice__c == SalesPrice__c,
    (OrderDiscountPercent__c + LineDiscountPercent__c),
    (ListAmount__c - TotalAmount__c) / ListAmount__c
  )
)</formula>
    <inlineHelpText>Effective Discount is based on Total Amount from List Amount</inlineHelpText>
    <label>Effective Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>