force-app/main/default/objects/SalesOrderProductLine__c/fields/Emblem_Type__c.field-meta.xml
<CustomField>
    <fullName>Emblem_Type__c</fullName>
    <label>Emblem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>10 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>