force-app/main/default/objects/SalesOrderProductLine__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <formula>SalesOrder__r.EmployeeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmployeeID</label>
    <type>Text</type>
</CustomField>