force-app/main/default/objects/SalesOrderProductLine__c/fields/FSP_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>FSP_Discount_Amount__c</fullName>
    <formula>IF( Managed_Package_Product__c ,  True_Discount_Amount__c +  Total_Discount__c  ,  Total_Discount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSP Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>