force-app/main/default/objects/SalesOrderProductLine__c/fields/FSP_List_Price__c.field-meta.xml
<CustomField>
    <fullName>FSP_List_Price__c</fullName>
    <formula>IF( Managed_Package_Product__c , True_List_Price__c ,  ListPrice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSP List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>