force-app/main/default/objects/SalesOrderProductLine__c/fields/FSP_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>FSP_Sale_Price__c</fullName>
    <formula>IF( Managed_Package_Product__c ,  True_Sale_Price__c ,   Actual_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSP Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>