force-app/main/default/objects/SalesOrderProductLine__c/fields/FSP_Split_Value__c.field-meta.xml
<CustomField>
    <fullName>FSP_Split_Value__c</fullName>
    <formula>( IF( Managed_Package_Product__c ,  True_Sale_Price__c ,  Actual_Price__c  ) /  Recipient_Count__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSP Split Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>