force-app/main/default/objects/SalesOrderProductLine__c/fields/Full_Order_Product_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Order_Product_Line_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Order Product Line ID</label>
    <type>Text</type>
</CustomField>