force-app/main/default/objects/SalesOrderProductLine__c/fields/Inscription_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Line_1__c</fullName>
    <label>Inscription Line 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>