force-app/main/default/objects/SalesOrderProductLine__c/fields/Inscription_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Line_2__c</fullName>
    <label>Inscription Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>