force-app/main/default/objects/SalesOrderProductLine__c/fields/Intacct_Discount__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Discount__c</fullName>
    <formula>SalesOrder__r.Name &amp; &quot;-&quot; &amp; Name &amp; &quot;-d&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct Discount #</label>
    <type>Text</type>
</CustomField>