force-app/main/default/objects/SalesOrderProductLine__c/fields/Intacct_SKU__c.field-meta.xml
<CustomField>
    <fullName>Intacct_SKU__c</fullName>
    <formula>Product__r.Intacct_Sku__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct SKU</label>
    <type>Text</type>
</CustomField>