force-app/main/default/objects/SalesOrderProductLine__c/fields/InvoiceUnscheduledQuantity__c.field-meta.xml
<CustomField>
    <fullName>InvoiceUnscheduledQuantity__c</fullName>
    <formula>Quantity__c -  InvoiceScheduledQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Unscheduled Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>