force-app/main/default/objects/SalesOrderProductLine__c/fields/Kit_Bundle_Member__c.field-meta.xml
<CustomField>
    <fullName>Kit_Bundle_Member__c</fullName>
    <formula>IF( ISBLANK( KitBundleLine__c ) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kit/Bundle Member</label>
    <type>Checkbox</type>
</CustomField>