force-app/main/default/objects/SalesOrderProductLine__c/fields/Kit_Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Kit_Bundle_Product__c</fullName>
    <description>Referenced to product</description>
    <formula>Product__r.IsKitBundle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kit/Bundle Product</label>
    <type>Checkbox</type>
</CustomField>