force-app/main/default/objects/SalesOrderProductLine__c/fields/KitBundle__c.field-meta.xml
<CustomField>
    <fullName>KitBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kit/Bundle</label>
    <type>Checkbox</type>
</CustomField>