force-app/main/default/objects/SalesOrderProductLine__c/fields/KitBundleLine__c.field-meta.xml
<CustomField>
    <fullName>KitBundleLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit/Bundle Line</label>
    <referenceTo>SalesOrderProductLine__c</referenceTo>
    <relationshipName>Sales_Order_Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>