force-app/main/default/objects/SalesOrderProductLine__c/fields/KitBundleMemberRequired__c.field-meta.xml
<CustomField>
    <fullName>KitBundleMemberRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kit/Bundle Member Required</label>
    <type>Checkbox</type>
</CustomField>