force-app/main/default/objects/SalesOrderProductLine__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <formula>Right(&apos;00&apos; + TEXT(SortOrder__c), 3)&amp;&quot; &quot;&amp;HYPERLINK(&quot;/&quot; + Id, &quot;Detail&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line</label>
    <type>Text</type>
</CustomField>