force-app/main/default/objects/SalesOrderProductLine__c/fields/Line_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Effective_Date__c</fullName>
    <formula>IF( ISBLANK(Void_Date__c), SalesOrder__r.Released__c ,  Void_Date__c )</formula>
    <label>Line Effective Date</label>
    <type>DateTime</type>
</CustomField>