force-app/main/default/objects/SalesOrderProductLine__c/fields/LineDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>LineDiscountAmount__c</fullName>
    <formula>round(ProductAmount__c * LineDiscountPercent__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>