force-app/main/default/objects/SalesOrderProductLine__c/fields/LineDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>LineDiscountPercent__c</fullName>
    <label>Line Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>