force-app/main/default/objects/SalesOrderProductLine__c/fields/LineGroupSortOrder__c.field-meta.xml
<CustomField>
    <fullName>LineGroupSortOrder__c</fullName>
    <label>Line Group Sort Order</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>