force-app/main/default/objects/SalesOrderProductLine__c/fields/LineUnitCost__c.field-meta.xml
<CustomField>
    <fullName>LineUnitCost__c</fullName>
    <description>Unit Cost Override, if Blank, &apos;Product Unit Cost&apos; is used. User configuration controlled by Additional Product Info configuration settings and if &apos;Edit Unit Cost&apos; is checked.</description>
    <inlineHelpText>Unit Cost Override, if Blank, &apos;Product Unit Cost&apos; is used. User configuration controlled by Additional Product Info configuration settings and if &apos;Edit Unit Cost&apos; is checked</inlineHelpText>
    <label>Line Unit Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>