force-app/main/default/objects/SalesOrderProductLine__c/fields/ListAmount__c.field-meta.xml
<CustomField>
    <fullName>ListAmount__c</fullName>
    <description>Quantity multiplied by List Price.</description>
    <formula>round(Quantity__c * ListPrice__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity multiplied by List Price</inlineHelpText>
    <label>List Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>