force-app/main/default/objects/SalesOrderProductLine__c/fields/Managed_Package_Product__c.field-meta.xml
<CustomField>
    <fullName>Managed_Package_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed Package Product</label>
    <type>Checkbox</type>
</CustomField>