force-app/main/default/objects/SalesOrderProductLine__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <formula>Product_Name__c &amp; &quot;;&quot; &amp; SalesOrder__r.ContactBuying__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Memo</label>
    <type>Text</type>
</CustomField>