force-app/main/default/objects/SalesOrderProductLine__c/fields/No_Fee_Plan__c.field-meta.xml
<CustomField>
    <fullName>No_Fee_Plan__c</fullName>
    <formula>Product__r.No_Fee_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Fee Plan</label>
    <type>Checkbox</type>
</CustomField>