force-app/main/default/objects/SalesOrderProductLine__c/fields/NonStock__c.field-meta.xml
<CustomField>
    <fullName>NonStock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Stock</label>
    <type>Checkbox</type>
</CustomField>