force-app/main/default/objects/SalesOrderProductLine__c/fields/OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemId__c</fullName>
    <description>References the Opportunity Product Line of the related Opportunity associated with the Order for the particular Order Product Line.</description>
    <label>Opportunity Line Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>