force-app/main/default/objects/SalesOrderProductLine__c/fields/Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>Order_Contact__c</fullName>
    <formula>SalesOrder__r.Opportunity__r.Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Contact</label>
    <type>Text</type>
</CustomField>