force-app/main/default/objects/SalesOrderProductLine__c/fields/OrderDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderDiscountAmount__c</fullName>
    <formula>round(ProductAmount__c *  OrderDiscountPercent__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>