force-app/main/default/objects/SalesOrderProductLine__c/fields/OrderDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>OrderDiscountPercent__c</fullName>
    <formula>SalesOrder__r.DiscountPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>