force-app/main/default/objects/SalesOrderProductLine__c/fields/Package_Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Package_Discount_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Discount Applied</label>
    <type>Checkbox</type>
</CustomField>