force-app/main/default/objects/SalesOrderProductLine__c/fields/ParentProductLine__c.field-meta.xml
<CustomField>
    <fullName>ParentProductLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Line</label>
    <referenceTo>SalesOrderProductLine__c</referenceTo>
    <relationshipName>Order_Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>