force-app/main/default/objects/SalesOrderProductLine__c/fields/Plaque_Color__c.field-meta.xml
<CustomField>
    <fullName>Plaque_Color__c</fullName>
    <label>Plaque Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Mahogany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>